dist_pkgdata_DATA = \
      1.bmp \
      2.bmp \
      4.bmp \
      8.bmp \
      9.bmp \
     16.bmp \
     17.bmp \
     18.bmp \
     19.bmp \
     25.bmp \
     32.bmp \
     33.bmp \
     34.bmp \
     35.bmp \
     36.bmp \
     38.bmp \
     39.bmp \
     49.bmp \
     50.bmp \
     51.bmp \
     57.bmp \
     64.bmp \
     66.bmp \
     68.bmp \
     70.bmp \
     72.bmp \
     76.bmp \
     78.bmp \
     85.bmp \
     98.bmp \
    100.bmp \
    102.bmp \
    114.bmp \
    128.bmp \
    132.bmp \
    136.bmp \
    137.bmp \
    140.bmp \
    144.bmp \
    145.bmp \
    147.bmp \
    152.bmp \
    153.bmp \
    170.bmp \
    196.bmp \
    200.bmp \
    201.bmp \
    204.bmp \
    228.bmp \
    256.bmp
